[package]
name = "dmpd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
dash-mpd = "0.16.0"
image = "0.25.1"
imageproc = "0.24.0"
ab_glyph = "0.2.24"
serde_json = "1"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.37"
url = "2.5.2"
