[package]
name = "dmpd"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.24"
chrono = "0.4.37"
clap = { version = "3.2.8", features = ["derive"] }
dash-mpd = "0.16.0"
image = "0.25.1"
imageproc = "0.24.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = "1.0.23"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
url = "2.5.2"

[patch.crates-io]
wide = "0.7.28"
